--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <span align="center"><p>Abandon the left vs. right paradigm and adopt new ideals, where consistency and logic reign supreme.</p></span>
         </article>
         <section>
-            <img src="C:Users/DELL/Pictures/moonbloglogo2.png">
+            <img src="moonbloglogo2.png">
         </section>
         <main>
             <div>
