--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://github.com/moonthegreat969/first-reponsive_repo/blob/gh-pages/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>CSS GRIDS SEVEN</title>
 </head>
 <body>
