--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p>Abandon the left vs. right paradigm and adopt new ideals, where consistency and logic reign supreme.</p>    
             </div>
             <div>
-                <img src="moonbloglogo2.png">
+                <img src="moonbloglogo2.png" alt="img description">
             </div>
         </article>
         <main>
